--- a/.config
+++ b/.config
@@ -1,16 +1,16 @@
 # Build R2S Firmware:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_TARGET_rockchip=y
 CONFIG_TARGET_rockchip_armv8=y
 CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2s=y
-EOF
+# EOF
 
 # Set firmware size:
 CONFIG_TARGET_KERNEL_PARTSIZE=256
 CONFIG_TARGET_ROOTFS_PARTSIZE=1024
 
 # Firmware Type:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_USES_DEVICETREE=y
 CONFIG_USES_INITRAMFS=y
 CONFIG_USES_SQUASHFS=y
@@ -23,18 +23,18 @@ CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 CONFIG_TARGET_IMAGES_GZIP=y
-EOF
+# EOF
 
 # Build VMware Firmware:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 # CONFIG_TARGET_IMAGES_PAD is not set
 # CONFIG_VMDK_IMAGES is not set
-EOF
+# EOF
 
 # Build UEFI Firmware:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_EFI_IMAGES=y
-EOF
+# EOF
 
 # For IPv6:
 # cat >> .config <<EOF
@@ -43,14 +43,14 @@ EOF
 # EOF
 
 # More system:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_PACKAGE_chinadns-ng=y
 CONFIG_PACKAGE_kmod-fs-squashfs=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
-EOF
+# EOF
 
 # For USB3.0:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_PACKAGE_kmod-usb-ehci=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
@@ -76,10 +76,10 @@ CONFIG_PACKAGE_kmod-nf-nathelper=y
 CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-tun=y
-EOF
+# EOF
 
 # LuCI-app:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
@@ -97,17 +97,17 @@ CONFIG_PACKAGE_luci-app-r2sflasher=y
 CONFIG_PACKAGE_luci-app-ramfree=y
 # ==========add from diy-part2.sh（Mydiy-luci-app-and-theme）==========
 # CONFIG_PACKAGE_luci-app-smartdns is not set
-EOF
+# EOF
 
 # LuCI-theme:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_PACKAGE_luci-theme-infinityfreedom=y
 # ==========add from diy-part2.sh（Mydiy-luci-app-and-theme）==========
 # CONFIG_PACKAGE_luci-theme-atmaterial=y
-EOF
+# EOF
 
 # Software:
-cat >> .config <<EOF
+# cat >> .config <<EOF
 CONFIG_PACKAGE_aircrack-ng=m
 CONFIG_PACKAGE_apcupsd=y
 CONFIG_PACKAGE_apcupsd-cgi=y
@@ -148,4 +148,4 @@ CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_whereis=y
 CONFIG_PACKAGE_xz-utils=y
 CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
-EOF
+# EOF
