--- a/.config
+++ b/.config
@@ -123,12 +123,11 @@ CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_usb-modeswitch=y
 CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_vim-fuller=y
-# CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wget=y
-# CONFIG_PACKAGE_wireless-tools=y
+# CONFIG_PACKAGE_wireless-tools is not set
 CONFIG_PACKAGE_whereis=y
 CONFIG_PACKAGE_xz-utils=y
-CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
+# CONFIG_VSFTPD_USE_UCI_SCRIPTS is not set
 
 # Remove Default
 # CONFIG_PACKAGE_zerotier is not set
